[project]
name = "pybg-functime"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "baggiponte", email = "57922983+baggiponte@users.noreply.github.com"},
]
dependencies = [
    "functime[lgb,plot]>=0.9.4",
    "lightgbm>=4.2.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
ide = [
    "marimo>=0.1.71",
]

[tool.pdm]
package-type = "application"
